时间回拨问题优化